# baxter-bon-appetit

./: .gitignore  LICENSE  README.md  guide_to_replicate_in_other_robots.md  requirements.txt  setup_baxter_bon_appetit.md
matlab/: Baxter_Jacobian_7dof.m  Baxter_Simulation.m  Baxter_Workspace_DT.fig  Exe_Sim_Baxter.m  IPK.m  IPK_7dof.m  Puntos_Simulacion.m  README.md  RotationMatrix.m  RotationMatrixExpand.m  TransformationMatrix.m  Trayectoria_5_orden.m  baxter_jacobian_calculation.m
matlab/project1/: BaxterClass.m  BaxterFunctions.m  BaxterJacobian.m  Baxter_Jacobian.mlx  Baxter_Jacobian_7dof.m  Baxter_Simulation.m  Baxter_Workspace.asv  Baxter_Workspace.m  Cuadrado_baxter.txt  DirectCinematic.m  Exe_Sim_Baxter.m  FPK.m  IPK.m  IPK_7dof.m  OrientationAngles.asv  OrientationAngles.m  Puntos_Simulacion.m  README.md  Trayectoria_5_orden.m  baxter_calibration_measurements.m
python/baxter_bon_appetit/: CMakeLists.txt  README.md  package.xml  setup.py
python/baxter_bon_appetit/assets/mpc_data/mpc_robustness_model_disturbance_rejection/: baxter_data_processed.mat
python/baxter_bon_appetit/assets/pid_data/: pid_data.mat
python/baxter_bon_appetit/cfg/: JointSpringsBonAppetit.cfg
python/baxter_bon_appetit/launch/: fake_mpc_impedance_control_nodes.launch  fake_mpc_nodes.launch  fake_mpc_position_control_nodes.launch  fake_ol_position_control_nodes.launch  mpc_impedance_control_nodes.launch  mpc_nodes.launch  mpc_position_control_nodes.launch  ol_position_control_nodes copy.launch
python/baxter_bon_appetit/samples/: sample_cartesian_increments.py  sample_control_loop.py  sample_get_baxter_camera_point.py
python/baxter_bon_appetit/scripts/: face_detection_limb_cam.py  map_workspace.py  node_fsm.py  node_go_to_home.py  node_gui.py  node_home.py  node_impedance_control.py  node_joint_position_control.py  node_mpc_control.py  node_mpc_control_trajectory.py  node_open_loop_control_trajectory.py  node_pick_up_food.py  node_proportional_control_from_face_coordinates.py  node_publish_face_coordinates.py  node_publish_fake_face_coordinates.py  node_save_data.py  set_cartesian_position_ipk.py
python/baxter_bon_appetit/scripts/recordings/: blessing.csv  pick_up_food.csv
python/baxter_bon_appetit/src/baxter_control/: cartesian_increment.py  mpc_controller.py
python/baxter_bon_appetit/src/baxter_essentials/: baxter_class.py  baxter_fpk.py  baxter_ipk.py  baxter_jacobian.py  denavit_hartenberg.py  transformation.py
python/baxter_bon_appetit/src/baxter_vision_mapping/: baxter_camera_complete_transform.py  baxter_camera_transform_tool_to_face.py
(+68 files in other folders)
