<?xml version="1.0"?>
<package>
  <name>baxter_bon_appetit</name>
  <version>0.0.1</version>
  <description>
    Programs for Baxter as a Feeding Robot Assistant.
  </description>

  <maintainer email="tesisbaxter@gmail.com">
    Santiago Garcia Arango and Elkin Javier Guerra Galeano.
  </maintainer>
  <license>MIT</license>
  <url type="website"></url>
  <url type="repository">
    https://github.com/san99tiago/baxter-bon-appetit
  </url>
  <url type="bugtracker">
    https://github.com/san99tiago/baxter-bon-appetit
  </url>
  <author>Santiago Garcia Arango and Elkin Javier Guerra Galeano</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>

</package>